   rather than column name.  This is necessary in poorly designed tables
   where column names differ only in case.  This may also improve performance.
8. Added the ability to work with delimited names in database tables or
   columns.
9. API change to allow generating with selected contexts rather than
   the entire config file.
10. IBATIS-414 - make the Example and Criteria classes extendable

-------------------------------------------------------------------------------
Version 1.0.0:
1. Major refactoring of code generators to use new DOM classes.  This makes
   adding and extending code generators much easier.
2. Added a new set of code generators that take advantage of iBATIS' new
   support for nested iterate tags.
3. Added another new set of code generators that take advantage of iBATIS'
   new support for nested iterate tags, and builds code that uses many JSE 5.0
   features including parameterized types and annotations.
4. Added support for "alias" on table configuration
5. Fixed the XML file merger so that extraneous blank lines in an XML merge
   are removed
6. Major overhaul and improvement of the documentation
7. Added a typeHandler attribute to <columnOverride>
8. Added exampleMethodVisibility as a property for the DAO generator
9. Added methodNameCalculator as a property for the DAO generator
10. Added the ability to specify wildcards for schema and/or tableName in <table>
11. Added the ability to suppress type warning messages in a JSE 5.0 environment
12. Added the ability to specify different types of domain models
13. Added the "verbose" attribute to the Ant task
14. Allowed the Ant task to accept a property set
15. Added a <properties> element to the XML configuration

For full details, see the user's guide at doc\index.html in this
distribution - then look at the "What's New" page.

-------------------------------------------------------------------------------
Version 0.6.5:
1. Added support for specifying rootClass for the model objects and