@@ -1,4 +1,4 @@
 #Abator build version info
-#Tue Jun 05 21:25:26 CDT 2007
-version=1.0.1
-buildNum=363
+#Tue Aug 21 21:49:49 CDT 2007
+version=1.1.0
+buildNum=365
