@@ -37,21 +37,58 @@ Eclipse plugin.</p>
 <p>Abator can be run directly from the command line.  The JAR manifest includes the
    name of the default class (<code>org.apache.ibatis.abator.api.AbatorRunner</code>)
    or you can specify it yourself.  The <code>AbatorRunner</code>
-   class takes two arguments: the name of the configuration file,
-   and a flag (<code>true</code> or <code>false</code>) specifying whether existing Java files
-   should be overwritten.  If the flag is <code>false</code>, and an Java file already exists
-   with the same name as a newly generated file, then Abator will write the
-   newly generated Java file to the proper directory with a unique name
-   (e.g. MyClass.java.1, MyClass.java.2, etc.).
-   <b>Important: Abator will always merge and overwrite XML files.</b></p>
+   class accepts several arguments as detailed below:</p>
+<table border="1" cellspacing="0" cellpadding="5">
+<tr>
+  <th>Argument</th>
+  <th>Value</th>
+</tr>
+<tr>
+  <td>-configfile (required)</td>
+  <td>Specifies the name of the configuration file.</td>
+</tr>
+<tr>
+  <td>-overwrite (optional)</td>
+  <td>If specified, then existing Java files will be overwritten if an existing Java
+      file if found with the same nae as a generated file.  If not specified, and a
+      Java file already exists with the same name as a generated file, then Abator
+      will write the newly generated Java file to the proper directory with a
+      unique name (e.g. MyClass.java.1, MyClass.java.2, etc.).
+      <b>Important: Abator will always merge and overwrite XML files.</b></td>
+</tr>
+<tr>
+  <td>-contextids (optional)</td>
+  <td>If specified, then this is a comma delimited list of contexts to use in
+      the current run of Abator.  Any id specified in the list must exactly
+      match the value of the <code>id</code> attribute of an
+      &lt;abatorContext&gt; configuration element.  Only ids specified
+      in this list will be active for this run of Abator.  If this argument
+      is not specified, then all contexts will be active.</td>
+</tr>
+<tr>
+  <td>-tables (optional)</td>
+  <td>If specified, then this is a comma delimited list of tables to use in
+      the current run of Abator.  Any table specified in the list must exactly
+      match the fully qualified table name specified in a
+      &lt;table&gt; configuration element.  Only tables specified
+      in this list will be active for this run of Abator.  If this argument
+      is not specified, then all tables will be active.
+      Specify table names as: <br/><br/>
+      <code>table</code><br/>
+      <code>schema.table</code><br/>
+      <code>catalog..table</code><br/>
+      etc.</td>
+</tr>
+</table>
+
 <p>You must still create an Abator XML configuration file.  If the file is
    named "abatorConfig.xml", then any of the following command lines will run
    Abator:</p>
 <pre>
-   java -jar abator.jar abatorConfig.xml false
-   java -jar abator.jar abatorConfig.xml true
-   java -cp abator.jar org.apache.ibatis.abator.api.AbatorRunner abatorConfig.xml false
-   java -cp abator.jar org.apache.ibatis.abator.api.AbatorRunner abatorConfig.xml true
+   java -jar abator.jar -configfile abatorConfig.xml
+   java -jar abator.jar -configfile abatorConfig.xml -overwrite
+   java -cp abator.jar org.apache.ibatis.abator.api.AbatorRunner -configfile abatorConfig.xml
+   java -cp abator.jar org.apache.ibatis.abator.api.AbatorRunner -configfile abatorConfig.xml -overwrite
 </pre>
 
 <h2>Running Abator from Ant</h2>
@@ -74,6 +111,56 @@ Eclipse plugin.</p>
      &lt;/target&gt;
    &lt;/project&gt;
 </pre>
+
+<p>Abator task attributes are as follows:</p>
+<table border="1" cellspacing="0" cellpadding="5">
+<tr>
+  <th>Attribute</th>
+  <th>Value</th>
+</tr>
+<tr>
+  <td>configfile (required)</td>
+  <td>Specifies the name of the configuration file.</td>
+</tr>
+<tr>
+  <td>overwrite (optional)</td>
+  <td>If "true", "yes", etc., then existing Java files will be overwritten if an existing Java
+      file if found with the same nae as a generated file.  If "false", "no", etc., and a
+      Java file already exists with the same name as a generated file, then Abator
+      will write the newly generated Java file to the proper directory with a
+      unique name (e.g. MyClass.java.1, MyClass.java.2, etc.).
+      <b>Important: Abator will always merge and overwrite XML files.</b></td>
+</tr>
+<tr>
+  <td>contextids (optional)</td>
+  <td>If specified, then this is a comma delimited list of contexts to use in
+      the current run of Abator.  Any id specified in the list must exactly
+      match the value of the <code>id</code> attribute of an
+      &lt;abatorContext&gt; configuration element.  Only ids specified
+      in this list will be active for this run of Abator.  If this argument
+      is not specified, then all contexts will be active.</td>
+</tr>
+<tr>
+  <td>tables (optional)</td>
+  <td>If specified, then this is a comma delimited list of tables to use in
+      the current run of Abator.  Any table specified in the list must exactly
+      match the fully qualified table name specified in a
+      &lt;table&gt; configuration element.  Only tables specified
+      in this list will be active for this run of Abator.  If this argument
+      is not specified, then all tables will be active.
+      Specify table names as: <br/><br/>
+      <code>table</code><br/>
+      <code>schema.table</code><br/>
+      <code>catalog..table</code><br/>
+      etc.</td>
+</tr>
+<tr>
+  <td>verbose (optional)</td>
+  <td>If "true", "yes", etc., then Abator will log progress messages to the
+      ant console.  The default is "false".</td>
+</tr>
+</table>
+
 <p>Notes:</p>
 <ul>
   <li>The classpath on the &lt;taskdef&gt; is used to tell Ant where the implementing
@@ -81,15 +168,6 @@ Eclipse plugin.</p>
      of the other ways described in the Ant manual</li>
    <li>The name of the task can be anything you desire, "abator" is
      simply an example</li>
-   <li>The "overwrite" attribute is optional.  If "true", "yes", etc. then Abator
-     will overwrite any existing Java files.  If "false", "no", etc. then
-     Abator will not touch existing Java files - the newly generated Java file
-     will be saved with a unique filename instead.  The default is "false".
-     <b>Important: Abator will always merge and overwrite XML files.</b></li>
-   <li>The "configfile" attribute is required - it must specify a valid Abator
-     configuration XML file.</li>
-   <li>The "verbose" attribute is optional.  If "true", "yes", etc then the task will
-       log Abator progress messages to the Ant console.  The default is "false".</li>
    <li>The task supports an optional nested <code>&lt;propertyset&gt;</code> element which
        is the standard Ant property set type.  This can be used to pass parameters into
        a configuration file.  For example, the above property
