@@ -31,6 +31,8 @@ RuntimeError.15=<properties> resource {0} does not exist
 RuntimeError.16=Cannot load properties from <properties> resource {0}
 RuntimeError.17=Cannot load properties from <properties> url {0}
 RuntimeError.18=Unsupported XML Node Type {0} in XML File Merger
+RuntimeError.19=Value missing after {0}
+RuntimeError.20=Unknown argument: {0}
 
 Warning.0=There are no statements enabled for table {0}, this table will be ignored.
 Warning.1=Table {0} does not exist, this table will be ignored
@@ -68,9 +70,26 @@ Progress.11=Generating DAO Interface for table {0}
 Progress.12=Generating SQL Map for table {0}
 Progress.13=Found SQL Statement: {0}
 
+Usage.Lines=20
 Usage.0=Abator code generator for iBATIS.  Usage:
-Usage.1=\   java -jar abator.jar configfile overwrite
-Usage.2=
-Usage.3=Where:
-Usage.4=\   configfile: the name of the abator XML configuration file
-Usage.5=\   overwrite: true if exsting Java files should be overwritten
+Usage.1=\   java -jar abator.jar -configfile file_name
+Usage.2=\                        [-overwrite]
+Usage.3=\                        [-contextids ids]
+Usage.4=\                        [-tables tableName]
+Usage.5=
+Usage.6=Where:
+Usage.7=\   -configfile: Specifies the name of the abator XML configuration file (required)
+Usage.8=
+Usage.9=\   -overwrite: If specified then exsting Java files will be overwritten.
+Usage.10=\               If not specified, then  Abator will not overwrite existing
+Usage.11=\               Java files (will save results in uniqely named files)
+Usage.12=
+Usage.13=\   -contextids: Used to specify a comma delimited list of contexts to use in this
+Usage.14=\                run of Abator.  If not specified, all contexts will be used.
+Usage.15=
+Usage.16=\   -tables: Used to specify a comma delimited list of tables to use in this
+Usage.17=\            run of Abator.  If not specified, all tables will be used.  Table
+Usage.18=\            names must be fully qualified (e.g. schema.tablename).  Table names
+Usage.19=\            must exactly match the case specified in the configuration file.
+
+
